# fold

./: .gitignore  gradle.properties  settings.gradle.kts  usb-exclusive-audio-research.md
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/fold/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/fold/shizuku/: IShellService.aidl
app/src/main/cpp/: CMakeLists.txt  dsp-engine.cpp  dsp-engine.h  usb_audio_native.c  usb_audio_output.cpp  usb_audio_output.h
app/src/main/java/com/example/fold/: AppContainer.kt  FoldApp.kt  MainActivity.kt
app/src/main/java/com/example/fold/audio/: DspAudioSink.kt  DspEngine.kt  DspRenderersFactory.kt  (+10 more)
app/src/main/res/drawable/: bg_dialog_light.xml  bg_thumbnail_rounded.xml  ic_arrow_right.xml  ic_check_circle_filled.xml  ic_check_circle_outline.xml  ic_file_archive.xml  ic_file_audio.xml  ic_file_epub.xml  ic_file_folder.xml  ic_file_generic.xml  ic_file_image.xml  ic_file_pdf.xml  ic_file_text.xml  ic_file_video.xml  ic_fullscreen.xml  ic_fullscreen_exit.xml
app/src/main/res/drawable-night/: bg_dialog_light.xml
app/src/main/res/layout/: item_archive_entry.xml  item_file.xml  item_file_grid.xml  item_playlist.xml
app/src/main/res/mipmap-anydpi-v26/: ic_calc.xml  ic_fold_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/com/example/fold/: ExampleUnitTest.kt
(+65 files in other folders)
